<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".download.DownloadActivity">

    <Button
        android:id="@+id/startDownload"
        android:layout_width="196dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/start_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pauseDownload"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/pause_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDownload" />

    <Button
        android:id="@+id/cancelDownload"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/cancel_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pauseDownload" />
    
</androidx.constraintlayout.widget.ConstraintLayout>