<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/foregroundService"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/foreground_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backgroundService"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/background_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foregroundService" />

    <Button
        android:id="@+id/downloadService"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/download_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundService" />

</androidx.constraintlayout.widget.ConstraintLayout>